fixed spacing with form on mobile

--- a/main.css
+++ b/main.css
@@ -110,4 +110,19 @@ h4 {
 input[type=text], textarea {
   padding-left: 5px;
 }
-
+.proj-form {
+  display: flex;
+  align-items: center;
+}
+.leading-form {
+  align-items: center;
+}
+@media only screen and (max-width: 430px) {
+  .proj-form {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  .leading-form {
+    align-items: flex-start;
+  }
+}
